--- a/flex-style.css
+++ b/flex-style.css
@@ -30,6 +30,7 @@ html, body {
     display: flex;
     width: 584px;
     min-height: 144px;
+    margin-bottom: 20px;
     padding: 20px;
     border: 2px solid #dddddd;
     justify-content: space-between;
@@ -56,10 +57,16 @@ html, body {
     display: flex;
     width: 100px;
     height: 100px;
-    background-color: black;
+    background-color: #7FD1B9;
     justify-content: center;
     align-items: center;
     border-radius: 4px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.flex-item:hover {
+    transform: scale(1.1);
+    box-shadow: 1px 1px 3px darkgray;
 }
 
 .flex-item span {
@@ -86,3 +93,41 @@ html, body {
 .item-5 {
     background-color: #7A6563;
 }
+
+.icon-text {
+    background-color: #ECE2D0;
+    justify-content: flex-start;
+}
+
+.icon-text .icon-box {
+    display: flex;
+    width: 80px;
+    margin-right: 10px;
+    align-items: flex-start;
+}
+
+.icon-text .text-box {
+    display: flex;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    padding-left: 10px;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.icon-text .icon-box img {
+    width: 70px;
+    height: auto;
+}
+.text-box span {
+    display: inline-block;
+    background-color: #D3A588;
+    padding: 3px 5px;
+    margin: 0 1px;
+    border-radius: 4px;
+    font-family: "PT Mono", sans-serif;
+    font-size: 11px;
+    font-weight: bold;
+}
+
